# cg_track

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: configuration.h  controls.cpp  controls.hpp  glad_config.h  glew_config.cpp  glew_config.h  glew_config.hpp  glfw_config.cpp  glfw_config.h  glfw_config.hpp  reflection.h  shaders.h  vaoConfig.h  vboConfig.h
common/glad/: glad.c  glad.h
common/mesh/: face.h  fileReader.h  group.h  material.h  mesh.h  mtlReader.h  objReader.h  streamReader.h  tokenHandler.h
common/structure/: Obj3D.h  boundingBox.h  camera.h  cfgReader.h  face.h  fileReader.h  group.h  material.h  mesh.h  model.h  mtlReader.h  objReader.h  scene.h  streamReader.h  txtWriter.h
common/structure_curve/: MTLWriter.h  OBJWriter.h  TXTWriter.h  shader.h  txtReader.h  txtWriter.h
src/: hello_window.cpp
src/curve_generator/: curve_generator.cpp
src/curve_generator/Shaders/Core/: core.vs
src/curve_generator/resources/Shaders/Core/: core.fs
src/hello_window/: hello_window.cpp
src/obj_load/: obj_load.cpp
src/obj_load/resources/: shader.fs  shader.vs
src/obj_load/resources/Shaders/: model_loading.fs  model_loading.vs
src/obj_load/resources/Shaders/Core/: core.frag  core.vert
src/obj_load/resources/car/: Ambulance_Van.mtl  Van_Delivery.mtl
src/obj_load/resources/config/: curve.cfg  mesa.cfg  paintball.cfg
src/obj_load/resources/curve/: curve.mtl  ourCurve.txt
src/obj_load/resources/shaders/: model_loading.fs  model_loading.vs  model_loading_.fs  model_loading_.vs
src/obj_load/resources/ugly_dice/: FBX.fbx
src/screen_saver/: screen_saver.cpp
src/screen_saver/resources/: shader.fs  shader.vs
src/test_draw/: test_draw.cpp
src/test_draw/resources/: shader.fs
src/test_draw/resources/Shaders/Core/: core.frag  core.vert
src/test_draw/resources/ugly_dice/: 3DSMAX.3ds  DAE.dae  WAVEFRONT.mtl
src/triangle/: triangle.cpp
src/triangle/resources/: shader.fs  shader.vs
